--- a/Desafio/style.css
+++ b/Desafio/style.css
@@ -44,7 +44,7 @@ input[type="number"] {
   font-size: 1em;
 }
 
-input[type="submit"] {
+button[type="submit"] {
   width: 100%;
   padding: 10px;
   background-color: #28a745;
@@ -80,4 +80,10 @@ ul li {
 ul li span {
   font-size: 1em;
   color: #333;
+}
+
+dialog {
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);
 }
