--- a/Desafio/Desafio 2.0/style.css
+++ b/Desafio/Desafio 2.0/style.css
@@ -38,7 +38,7 @@ h2 {
   cursor: pointer;
 }
 
-.contact-list .contact-item {
+.contact-list .contact-item  {
   margin-bottom: 20px;
   padding: 15px;
   background-color: #1a2b47;
@@ -83,7 +83,7 @@ h2 {
   color: #fff;
 }
 
-.new-contact button {
+.new-contact button{
   background-color: #0d6efd;
   color: #fff;
   padding: 10px;
@@ -141,5 +141,41 @@ h2 {
 }
 
 i {
+  cursor: pointer;
+}
+
+dialog {
+  border-radius: 10px;
+  background-color: #132133;
+  padding: 20px;
+}
+
+#formEditContact {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  margin-bottom: 5px;
+  background-color: #1a2b47;
+  border-radius: 10px;
+  font-size: 17px;
+  color: #fff;
+}
+
+#legenda {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+fieldset {
+  border: none;
+}
+
+#saveEditContact {
+  background-color: #0d6efd;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
 }
